# agora-courts

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
programs/agora-court/: Cargo.toml
programs/agora-court/src/: constant.rs  error.rs  lib.rs
programs/agora-court/src/instructions/: claim.rs  close_dispute.rs  create_case.rs  create_dispute.rs  edit_court.rs  initialize_case.rs  initialize_court.rs  initialize_dispute.rs  initialize_record.rs  initialize_reputation.rs  interact.rs  mod.rs  notes.txt  reveal_vote.rs  select_vote.rs  vote.rs
programs/agora-court/src/state/: case.rs  court.rs  dispute.rs  mod.rs  reputation.rs  voter_record.rs
programs/demo-tokens/: Cargo.toml
programs/demo-tokens/src/: lib.rs
tests/: README.md  agora-court.ts  basic.test.ts  claim.test.ts  close.test.ts  config.ts  court-suite.ts  create-court.test.ts  demo-initialize.test.ts  edit-court.test.ts  initialize-case.test.ts  initialize-court.test.ts  initialize-dispute.test.ts  initialize-record.test.ts  interact.test.ts  mint.ts  multi-case.test.ts  no-reveal.test.ts  no-vote.test.ts  notes.txt  receive-tokens.test.ts  submit-token.test.ts  user-suite.ts  utils.ts  vote.test.ts
tests/agora_tests/: claim.test.ts  close.test.ts  config.ts  initialize-case.test.ts  initialize-court.test.ts  initialize-dispute.test.ts  initialize-record.test.ts  initialize.test.ts  interact.test.ts  utils.ts  vote.test.ts
tests/demo_tests/: create-court.test.ts  demo-initialize.test.ts  get-token.ts  receive-tokens.test.ts  submit-token.test.ts  token-vote.test.ts
(+7 files in other folders)
