[package]
name = "agora-court"
version = "0.1.3"
description = "Agora Courts, an on-chain dispute resolution protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agora_court"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.27.0", features = ["init-if-needed"]}
anchor-spl = "0.27.0"